# trash-calendar

./: .gitignore  README.md  app.py  pyproject.toml
templates/: base.html  content.html
